@@ -1,16 +1,27 @@
 plugins {
     id("java-library")
+    id("maven-publish")
+    // https://github.com/jpenilla/run-task
     id("xyz.jpenilla.run-paper") version "3.0.2"
+    // https://github.com/eldoriarpg/plugin-yml
     id("de.eldoria.plugin-yml.paper") version "0.8.0"
-    //id("com.github.johnrengelman.shadow") version "8.1.1"
+    // https://github.com/PaperMC/paperweight
     id("io.papermc.paperweight.userdev") version "2.0.0-beta.19"
 }
 
-final String VERSION = "1.21.8"
+final String VERSION = "1.21.11"
 final String RUN_NUMBER = System.getenv("GITHUB_RUN_NUMBER") ?: "DEV"
 
 group = "cloud.grabsky"
 version = "$VERSION+$RUN_NUMBER"
+
+publishing {
+    publications {
+        register("maven", MavenPublication.class) {
+            from components.java
+        }
+    }
+}
 
 repositories {
     mavenLocal()
@@ -31,10 +42,10 @@ repositories {
 
 dependencies {
     // https://github.com/projectlombok/lombok
-    compileOnly("org.projectlombok:lombok:1.18.38")
-    annotationProcessor("org.projectlombok:lombok:1.18.38")
+    compileOnly("org.projectlombok:lombok:1.18.42")
+    annotationProcessor("org.projectlombok:lombok:1.18.42")
     // https://github.com/PaperMC/Paper
-    paperweight.paperDevBundle("1.21.8-R0.1-SNAPSHOT")
+    paperweight.paperDevBundle("1.21.11-R0.1-SNAPSHOT")
     // https://github.com/Grabsky/bedrock
     paperLibrary("cloud.grabsky:bedrock:1.21-67")
     // https://github.com/Grabsky/commands
@@ -44,20 +55,20 @@ dependencies {
     // https://github.com/EngineHub/WorldGuard
     compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT")
     // https://github.com/Grabsky/Azure
-    compileOnly("cloud.grabsky:azure-api:1.21.8-145") {
+    compileOnly("cloud.grabsky:azure-api:1.21.8-163") {
         exclude group: "cloud.grabsky", module: "bedrock"
     }
     // https://github.com/PlaceholderAPI/PlaceholderAPI
-    compileOnly("me.clip:placeholderapi:2.11.6")
+    compileOnly("me.clip:placeholderapi:2.11.7")
     // https://github.com/retrooper/packetevents
-    compileOnly("com.github.retrooper:packetevents-spigot:2.9.4")
-    // https://github.com/BlueMap-Minecraft/BlueMap
-    compileOnly("de.bluecolored:bluemap-api:2.7.4")
+    compileOnly("com.github.retrooper:packetevents-spigot:2.11.2")
+    // https://github.com/BlueMap-Minecraft/BlueMapAPI/
+    compileOnly("de.bluecolored:bluemap-api:2.7.7")
 }
 
 tasks {
     runServer {
-        minecraftVersion("1.21.8")
+        minecraftVersion("1.21.11")
         jvmArgs("--enable-preview")
     }
     compileJava {
@@ -73,7 +84,7 @@ paper {
     main = "cloud.grabsky.claims.Claims"
     loader = "cloud.grabsky.claims.Claims\$PluginLoader"
     generateLibrariesJson = true
-    apiVersion = "1.21.8"
+    apiVersion = "1.21.11"
     serverDependencies {
         "PlaceholderAPI" { load = "BEFORE"; required = true }
         "packetevents"   { load = "BEFORE"; required = true }
@@ -89,7 +100,7 @@ tasks.withType(xyz.jpenilla.runtask.task.AbstractRun.class).configureEach {
         vendor = JvmVendorSpec.JETBRAINS
         languageVersion = JavaLanguageVersion.of(21)
     }
-    jvmArgs("-XX:+AllowEnhancedClassRedefinition", "--enable-preview")
+    jvmArgs("-Xmx1G", "-XX:+AllowEnhancedClassRedefinition", "-Dcom.mojang.eula.agree=true", "-Dnet.kyori.ansi.colorLevel=truecolor")
 }
 
 // Returns formatted release name. (for GitHub Actions)
